# telegramlens-mcp

./: .gitignore  LICENSE  README.md  channels.csv  channels.md  pyproject.toml
.github/workflows/: release.yml
skills/telegram-buzz-snapshot/: SKILL.md
telegram_lens/: __init__.py  api.py  classify.py  client.py  cluster.py  collect_about.py  commands.py  config.py  daemon.py  db.py  discover.py  export_channels.py  extract.py  licensing.py  login_cli.py  market_clock.py  prices.py  queries.py  reindex.py  server.py  setup_claude.py  stocks.py  sync.py  tagging.py  watchlist.py
telegram_lens/data/: aliases.json  ambiguous_codes.json
tests/: smoke_offline.py
