[project]
name = "telegramlens-mcp"
version = "0.1.0"
description = "TelegramLens — 텔레그램 채널의 종목 내러티브·언급 흐름을 구조화해 AI에게 전달하는 로컬 MCP 서버"
readme = "README.md"
license = { text = "Proprietary" }
authors = [
    { name = "Johnhyeon" }
]
keywords = ["mcp", "claude", "telegram", "stock", "stocklens", "korea", "finance", "narrative", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: Other/Proprietary License",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Natural Language :: Korean",
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.12.0",
    "telethon>=1.36.0",
    "httpx>=0.27.0",
    "tzdata>=2024.1",
]

[project.scripts]
telegramlens = "telegram_lens.server:main"
telegramlens-login = "telegram_lens.login_cli:main"
telegramlens-setup = "telegram_lens.setup_claude:main"
telegramlens-daemon = "telegram_lens.daemon:main"
telegramlens-api = "telegram_lens.api:main"
telegramlens-reindex = "telegram_lens.reindex:main"
telegramlens-refresh-stocks = "telegram_lens.stocks:_cli_refresh"
telegramlens-export-channels = "telegram_lens.export_channels:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["telegram_lens"]
